// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing of sidebar component should render properly 1`] = `
<div>
  <div
    className="nav "
    id="myTopnav"
  >
    <Link
      className="a active active-text-header"
      replace={false}
      style={
        Object {
          "fontSize": "30px",
          "marginTop": "10px",
        }
      }
      to="/meals"
    >
      Book-A-Meal
    </Link>
    <span />
    <span />
    <span />
    <span />
    <Link
      className="a login-header"
      replace={false}
      to="/login"
    >
      Login
    </Link>
    <Link
      className="a register-header"
      replace={false}
      to="/register"
    >
      SignUp
    </Link>
    <span
      className="a icon"
      onClick={[Function]}
      role="button"
    >
      <span
        className="fa fa-bars"
      />
    </span>
  </div>
</div>
`;

exports[`Testing of sidebar component should render properly with admin role 1`] = `
<div>
  <div
    className="nav "
    id="myTopnav"
  >
    <Link
      className="a active active-text-header"
      replace={false}
      style={
        Object {
          "fontSize": "30px",
          "marginTop": "10px",
        }
      }
      to="/meals"
    >
      Book-A-Meal
    </Link>
    <span />
<<<<<<< HEAD
    <span />
    <span />
    <Link
      className="a"
      replace={false}
      to="/login"
    >
      Login
    </Link>
    <Link
      className="a"
      replace={false}
      to="/register"
    >
      SignUp
    </Link>
    <span
      className="a icon"
      onClick={[Function]}
      role="button"
    >
      <span
        className="fa fa-bars"
      />
    </span>
  </div>
</div>
`;

exports[`Testing of sidebar component should render properly with user info in the nav bar 2`] = `
<div>
  <div
    className="nav "
    id="myTopnav"
  >
    <Link
      className="a active active-text-header"
      replace={false}
      style={
        Object {
          "fontSize": "30px",
          "marginTop": "10px",
        }
      }
      to="/meals"
    >
      Book-A-Meal
    </Link>
    <span />
    <span />
    <span />
    <Link
      className="a"
      replace={false}
      to="/login"
=======
    <span
      className="a logOut"
      onClick={[Function]}
      role="button"
>>>>>>> bg(fix): Fixed my test and modified my controller
    >
      Login
    </Link>
    <Link
      className="a"
      replace={false}
      to="/register"
    >
      SignUp
    </Link>
<<<<<<< HEAD
=======
    <span />
    <span />
    <span />
>>>>>>> bg(fix): Fixed my test and modified my controller
    <span
      className="a icon"
      onClick={[Function]}
      role="button"
    >
      <span
        className="fa fa-bars"
      />
    </span>
  </div>
</div>
`;

exports[`Testing of sidebar component should render properly with user role 1`] = `
<div>
  <div
    className="nav "
    id="myTopnav"
  >
    <Link
      className="a active active-text-header"
      replace={false}
      style={
        Object {
          "fontSize": "30px",
          "marginTop": "10px",
        }
      }
      to="/meals"
    >
      Book-A-Meal
    </Link>
    <span />
<<<<<<< HEAD
    <span />
    <span />
    <Link
      className="a"
      replace={false}
      to="/login"
=======
    <span
      className="a logOut"
      onClick={[Function]}
      role="button"
>>>>>>> bg(fix): Fixed my test and modified my controller
    >
      Login
    </Link>
    <Link
      className="a"
      replace={false}
      to="/register"
    >
      SignUp
    </Link>
<<<<<<< HEAD
=======
    <span />
    <span />
    <span />
>>>>>>> bg(fix): Fixed my test and modified my controller
    <span
      className="a icon"
      onClick={[Function]}
      role="button"
    >
      <span
        className="fa fa-bars"
      />
    </span>
  </div>
</div>
`;

exports[`Testing of sidebar component should respond to click method 1`] = `
<div>
  <div
    className="nav "
    id="myTopnav"
  >
    <Link
      className="a active active-text-header"
      replace={false}
      style={
        Object {
          "fontSize": "30px",
          "marginTop": "10px",
        }
      }
      to="/meals"
    >
      Book-A-Meal
    </Link>
    <span />
<<<<<<< HEAD
    <span />
    <span />
    <Link
      className="a"
      replace={false}
      to="/login"
=======
    <span
      className="a logOut"
      onClick={[Function]}
      role="button"
>>>>>>> bg(fix): Fixed my test and modified my controller
    >
      Login
    </Link>
    <Link
      className="a"
      replace={false}
      to="/register"
    >
<<<<<<< HEAD
      SignUp
    </Link>
=======
      <img
        alt="user"
        className="rounded-circle"
        src="admin"
        style={
          Object {
            "height": "20px",
            "width": "20px",
          }
        }
      />
    </Link>
    <span />
    <span />
    <span />
>>>>>>> bg(fix): Fixed my test and modified my controller
    <span
      className="a icon"
      onClick={[Function]}
      role="button"
    >
      <span
        className="fa fa-bars"
      />
    </span>
  </div>
</div>
`;

exports[`Testing of sidebar component should respond to logout method 1`] = `
<div>
  <div
    className="nav "
    id="myTopnav"
  >
    <Link
      className="a active active-text-header"
      replace={false}
      style={
        Object {
          "fontSize": "30px",
          "marginTop": "10px",
        }
      }
      to="/meals"
    >
      Book-A-Meal
    </Link>
    <span />
<<<<<<< HEAD
    <span />
    <span />
    <Link
      className="a"
      replace={false}
      to="/login"
=======
    <span
      className="a logOut"
      onClick={[Function]}
      role="button"
>>>>>>> bg(fix): Fixed my test and modified my controller
    >
      Login
    </Link>
    <Link
      className="a"
      replace={false}
      to="/register"
    >
<<<<<<< HEAD
      SignUp
    </Link>
=======
      <img
        alt="user"
        className="rounded-circle"
        src="admin"
        style={
          Object {
            "height": "20px",
            "width": "20px",
          }
        }
      />
    </Link>
    <span />
    <span />
    <span />
>>>>>>> bg(fix): Fixed my test and modified my controller
    <span
      className="a icon"
      onClick={[Function]}
      role="button"
    >
      <span
        className="fa fa-bars"
      />
    </span>
  </div>
</div>
`;
